--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ dolphin.js
 <script src="libs/require.js"></script>
 <script src="config.js"></script>
 <script>
-    require(['dolphin'], function (Dolphin) {
+    require(['Dolphin'], function (Dolphin) {
         var serverUrl = "http://localhost:8888/myFirstDolphin/tutorial/";
         var dolphin = new Dolphin(serverUrl);
 
