--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
         var attribute = new ClientAttribute("attrId");
-        attribute.value = "testValue!";
+//        attribute.value = "testValue!";
 
         dolphin.getClientDolphin().presentationModel(
                 "step_7.TutorialConstants.modelId",
