--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
         <div class="container">
             <h1>Dolphin.js Tutorial</h1>
 
-            <form>
-                <fieldset>
-                    <legend>Step 1</legend>
-                    <span class="help-block">Type something in the input text to test the binding with the label.</span>
-                    <input id="textInput" type="text" placeholder="Type something..."/>
-                    <p>Label: <span id="label"></span></p>
-                    <button id="logActionButton" class="btn btn-primary">Log Action</button>
-                </fieldset>
-            </form>
+            <fieldset>
+                <legend>Step 1</legend>
+                <span class="help-block">Type something in the input text to test the binding with the label.</span>
+                <input id="textInput" type="text" placeholder="Type something..."/>
+                <p>Label: <span id="label"></span></p>
+                <button id="logActionButton" class="btn btn-primary">Log Action</button>
+                <button id="addButton" class="btn btn-primary">Add</button>
+                <div id="list"></div>
+            </fieldset>
 
-            <button id="addButton">Add</button>
-            <div id="list"></div>
-
+            <pre id="showCode" class="prettyprint" data-script-id="dolphinCode">
+                <!-- The code snippet will be shown here -->
+            </pre>
         </div>
 
-        <script>
+        <script id="dolphinCode">
             require([
                 'Dolphin',
                 'comm/ClientAttribute'
@@ -79,15 +79,14 @@
                     label.innerHTML = data.newValue;
                 });
 
-
                 var addButton = document.getElementById("addButton");
                 var list = document.getElementById("list");
-                addButton.addEventListener("click", function() {
-                    dolphin.getClientDolphin().send("step_7.TutorialConstants.add", function(models) {
+                addButton.addEventListener("click", function () {
+                    dolphin.getClientDolphin().send("step_7.TutorialConstants.add", function (models) {
                         console.log("NEW models", models);
-                        models.forEach(function(model) {
+                        models.forEach(function (model) {
                             var element = document.createElement("div");
-                            element.innerHTML = model.presentationModelType+": "+model.attributes[0].value;
+                            element.innerHTML = model.presentationModelType + ": " + model.attributes[0].value;
                             list.appendChild(element);
                         })
                     });
@@ -95,5 +94,13 @@
 
             });
         </script>
+
+        <script>
+            var showCode = document.getElementById("showCode");
+            var scriptId = showCode.getAttribute("data-script-id");
+            var script = document.getElementById(scriptId);
+            showCode.innerHTML = script.innerHTML;
+        </script>
+        <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?skin=sunburst"></script>
     </body>
 </html>
