added metadata tag

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="UTF-8">
         <title>Dolphin.js Tutorial</title>
         <script src="libs/require.js"></script>
         <script src="config.js"></script>
@@ -17,9 +18,9 @@
                 <div class="container">
                     <a class="brand" href="#">Dolphin.js</a>
 
-                    <ul class="nav">
-                        <li class="active"><a href="#">Step 1</a></li>
-                    </ul>
+                        <ul class="nav">
+                            <li class="active"><a href="#">Step 1</a></li>
+                        </ul>
                 </div>
             </div>
         </div>
