moved demo libs to libs/demo

--- a/index.html
+++ b/index.html
@@ -29,10 +29,7 @@
             <div class="row hero-unit">
                 <div class="span7">
                     <h1>Dolphin.js Tutorial</h1>
-
-                    <p class="lead">Because we are cool!</p>
-
-                    <p class="btn btn-primary">...and use Bootstrap!</p>
+                    <p class="lead">We've seen the future - it's in your browser</p>
                 </div>
                 <a href="http://open-dolphin.org">
                     <img class="span3 pull-right" src="img/open_dolphin_logo.png" alt="Open Dolphin">
@@ -139,8 +136,8 @@
         <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?skin=sunburst"></script>
 
         <!-- Use AngularJS directives for Bootstrap to make the code snippet collapsible -->
-        <script src="libs/angular-1.0.5.min.js"></script>
-        <script src="libs/ui-bootstrap-tpls-0.2.0.min.js"></script>
+        <script src="libs/demo/angular-1.0.5.min.js"></script>
+        <script src="libs/demo/ui-bootstrap-tpls-0.2.0.min.js"></script>
         <script>
             angular.module('dolphinJsTutorial', ['ui.bootstrap']);
 
