--- a/push.html
+++ b/push.html
@@ -38,8 +38,8 @@
             <canvas height="200" width="200" id="gauge"></canvas>
         </div>
 
-        <script src="libs/steelseries-min.js"></script>
-        <script src="libs/tween-min.js"></script>
+        <script src="libs/demo/steelseries-min.js"></script>
+        <script src="libs/demo/tween-min.js"></script>
         <script>
             var sections = [
                 steelseries.Section(0, 25, 'rgba(0, 0, 220, 0.3)'),
@@ -66,7 +66,7 @@
                 'comm/ClientAttribute'
             ], function (Dolphin, ClientAttribute) {
 
-                const serverUrl = "http://10.0.1.39:8080/dolphin-grails/dolphin/";
+                const serverUrl = "http://localhost:8080/dolphin-grails/dolphin/";
                 const pmId = "ManyEvents";
 
                 var dolphin = new Dolphin(serverUrl);
